# PRISM

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  EXPORT.md  LICENSE-COMMERCIAL.md  NOTICE  README.md  SECURITY.md  TRADEMARKS.md
.github/: launcher-polish-sequence.json
.github/issues/launcher-polish/: phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
.github/workflows/: ci.yml  cla.yml  launcher-polish-chain.yml  release.yml
Theme/Connections/: code.html
Theme/Home/: code.html
Theme/Overlay/: DESIGN.md  code.html
Theme/Profiles/: code.html
Theme/Settings/: code.html
crates/prism-client/: Cargo.toml
crates/prism-client/assets/fonts/: LICENSE
crates/prism-client/src/: app.rs  audio_player.rs  client_app.rs  connector.rs  cursor_renderer.rs  frame_receiver.rs  input_sender.rs  lib.rs  main.rs  session_bridge.rs
crates/prism-client/src/config/: client_config_prefs.rs  mod.rs  profiles.rs  servers.rs
crates/prism-client/src/input/: double_tap.rs  drag.rs  mod.rs
crates/prism-client/src/renderer/: animation.rs  blur_pipeline.rs  glass_panel.rs  mod.rs  shader_cache.rs  stream_texture.rs  text_renderer.rs  ui_renderer.rs
crates/prism-client/src/renderer/shaders/: blur.wgsl  glass.wgsl  glow.wgsl  quad.wgsl  text.wgsl  yuv_to_rgb.wgsl
crates/prism-client/src/ui/: mod.rs  theme.rs
crates/prism-client/src/ui/launcher/: card_grid.rs  mod.rs  nav.rs  profiles.rs  quick_connect.rs  recent_list.rs  server_card.rs  server_form.rs  settings.rs  shell.rs
crates/prism-client/src/ui/overlay/: capsule.rs  conn_panel.rs  display_panel.rs  mod.rs  perf_panel.rs  quality_panel.rs  stats_bar.rs
crates/prism-client/src/ui/widgets/: button.rs  checkbox.rs  dropdown.rs  icon.rs  label.rs  mod.rs  monitor_map.rs  segmented.rs  separator.rs  slider.rs  sparkline.rs  text_input.rs  toggle.rs
crates/prism-display/: Cargo.toml
crates/prism-display/src/: atlas.rs  capture.rs  classify.rs  cursor.rs  damage.rs  degradation.rs  encode_config.rs  encode_queue.rs  encoder_backend.rs  frame.rs  hysteresis.rs  keyframe.rs  lib.rs  pacing.rs  packet.rs  protocol.rs  ring.rs  types.rs  window_event.rs
crates/prism-metrics/: Cargo.toml
crates/prism-metrics/src/: histogram.rs  lib.rs  rate.rs  recorder.rs  snapshot.rs
crates/prism-observability/: Cargo.toml
crates/prism-observability/src/: feedback.rs  frame_trace.rs  lib.rs  overlay.rs  time_series.rs
crates/prism-platform-windows/: Cargo.toml
crates/prism-platform-windows/src/: d3d.rs  damage.rs  dda.rs  error.rs  lib.rs  monitor.rs  texture.rs
crates/prism-platform-windows/src/nvenc/: config.rs  format.rs  mod.rs  session.rs
crates/prism-protocol/: Cargo.toml
crates/prism-protocol/src/: capability.rs  channel.rs  clipboard.rs  error.rs  header.rs  input.rs  lib.rs
crates/prism-security/: Cargo.toml
crates/prism-security/src/: audit.rs  context.rs  crypto.rs  filter.rs  gate.rs  handshake.rs  identity.rs  key_rotation.rs  lib.rs
crates/prism-security/src/pairing/: mod.rs
crates/prism-security/src/pairing/methods/: manual.rs  mod.rs  spake2.rs
crates/prism-server/: Cargo.toml
crates/prism-server/src/: acceptor.rs  allow_all_gate.rs  arbiter_task.rs  audio_sender.rs  audio_task.rs  auto_update.rs  client_connections.rs  client_metrics.rs  client_session.rs  clipboard_stream.rs  config.rs  control_handler.rs  cursor_sender.rs  dda_capture.rs  encode_pool.rs  frame_sender.rs  frame_tracer_task.rs  heartbeat_task.rs  hw_encoder.rs  input_handler.rs  lib.rs  main.rs  metrics_collector.rs  negotiation_handler.rs  overlay_sender.rs  pairing_gate.rs  quality_monitor.rs  quality_task.rs  rate_limiter.rs  recv_loop.rs  server_app.rs  service.rs  session_manager.rs  shutdown.rs  speculative_idr.rs  static_cache.rs  test_pattern.rs  throughput_endpoint.rs
crates/prism-server/tests/: e2e_frame_flow.rs
crates/prism-session/: Cargo.toml
crates/prism-session/src/: arbiter.rs  channel.rs  control_msg.rs  dispatch.rs  error.rs  heartbeat.rs  lib.rs  negotiation.rs  profiles.rs  routing.rs  tombstone.rs  tracker.rs  types.rs
crates/prism-tests/: Cargo.toml
crates/prism-tests/src/: lib.rs
crates/prism-tests/tests/: resilience.rs  session_lifecycle.rs
crates/prism-tests/tests/harness/: mod.rs
crates/prism-transport/: Cargo.toml
crates/prism-transport/src/: coalesce.rs  connection.rs  framing.rs  lib.rs  stream_pool.rs  unified.rs
crates/prism-transport/src/quality/: bandwidth.rs  mod.rs  mtu.rs  one_way_delay.rs  prober.rs  trend.rs
crates/prism-transport/src/quic/: auth_token.rs  config.rs  connection.rs  mod.rs  socket.rs
docs/: PRD.md  TRD.md
docs/superpowers/plans/: 2026-03-30-phase1-foundation.md  2026-03-31-plan1-protocol-metrics.md  2026-03-31-plan10a-input-control-quality.md  2026-03-31-plan10b-clipboard-audio-pairing.md  2026-03-31-plan11-foundation.md  2026-03-31-plan12-quality-audio-clipboard.md  2026-03-31-plan13-phase-a-finish.md  2026-03-31-plan2-security.md  2026-03-31-plan3-transport.md  2026-03-31-plan4-session-observability.md  2026-03-31-plan5-display-engine.md  2026-03-31-plan6-integration.md  2026-03-31-plan7-windows-platform.md  2026-03-31-plan8-server-binary.md  2026-03-31-plan9-client-e2e.md  2026-04-01-ci-e2e-testing.md  2026-04-01-interactive-client.md  2026-04-01-launcher-ui-redesign.md  2026-04-02-launcher-light-theme-fix.md  2026-04-03-launcher-ui-polish.md
docs/superpowers/specs/: 2026-03-30-display-engine-design.md  2026-03-30-prism-architecture-design.md  2026-03-30-security-design.md  2026-03-30-session-observability-design.md  2026-03-30-transport-design.md  2026-03-31-phase1-completion-design.md  2026-03-31-production-completion-design.md  2026-04-01-ci-e2e-testing-design.md  2026-04-01-interactive-client-design.md  2026-04-01-launcher-ui-redesign-design.md
scripts/: deploy-launcher-polish.ps1
