[workspace]
resolver = "2"
members = [
    "crates/prism-protocol",
    "crates/prism-metrics",
    "crates/prism-security",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"

[workspace.dependencies]
bytes = "1"
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { version = "1", features = ["v7", "serde"] }
rand = "0.8"
hex = "0.4"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
arc-swap = "1"
tempfile = "3"

prism-protocol = { path = "crates/prism-protocol" }
prism-metrics = { path = "crates/prism-metrics" }
prism-security = { path = "crates/prism-security" }
