[workspace]
resolver = "2"
members = [
    "crates/prism-protocol",
    "crates/prism-metrics",
    "crates/prism-security",
    "crates/prism-transport",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"

[workspace.dependencies]
bytes = "1"
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { version = "1", features = ["v7", "serde"] }
rand = "0.8"
hex = "0.4"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
arc-swap = "1"
tempfile = "3"

quinn = "0.11"
tokio = { version = "1", features = ["sync", "time", "net", "macros", "rt-multi-thread"] }
async-trait = "0.1"
hmac = "0.12"
socket2 = { version = "0.5", features = ["all"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

prism-protocol = { path = "crates/prism-protocol" }
prism-metrics = { path = "crates/prism-metrics" }
prism-security = { path = "crates/prism-security" }
prism-transport = { path = "crates/prism-transport" }
