[workspace]
resolver = "2"
members = [
    "crates/prism-protocol",
    "crates/prism-metrics",
    "crates/prism-security",
    "crates/prism-transport",
    "crates/prism-observability",
    "crates/prism-session",
    "crates/prism-display",
    "crates/prism-server",
    "crates/prism-client",
    "crates/prism-platform-windows",
    "crates/prism-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
bytes = "1"
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.8"
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { version = "1", features = ["v7", "serde"] }
rand = "0.8"
hex = "0.4"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
arc-swap = "1"
tempfile = "3"
pollster = "0.4"
arboard = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dirs = "6"
openh264 = "0.9"
ffmpeg-next = "8"

quinn = "0.11"
tokio = { version = "1", features = ["sync", "time", "net", "macros", "rt-multi-thread", "signal"] }
async-trait = "0.1"
hmac = "0.12"
socket2 = { version = "0.5", features = ["all"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

wgpu = "24"
winit = "0.30"
glyphon = "0.8"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }

audiopus = "0.3.0-rc.0"
cpal = "0.17"

prism-protocol = { path = "crates/prism-protocol" }
prism-metrics = { path = "crates/prism-metrics" }
prism-security = { path = "crates/prism-security" }
prism-transport = { path = "crates/prism-transport" }
prism-observability = { path = "crates/prism-observability" }
prism-session = { path = "crates/prism-session" }
prism-display = { path = "crates/prism-display" }
prism-server = { path = "crates/prism-server" }
prism-client = { path = "crates/prism-client" }
prism-platform-windows = { path = "crates/prism-platform-windows" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.release.package.openh264-sys2]
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
