[package]
name = "prism-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
audio = ["dep:audiopus", "dep:cpal"]

[dependencies]
audiopus = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
prism-protocol = { workspace = true }
prism-transport = { workspace = true }
prism-display = { workspace = true }
prism-security = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
minifb = { workspace = true }
wgpu.workspace = true
winit.workspace = true
glyphon.workspace = true
bytemuck.workspace = true
image.workspace = true
openh264 = { workspace = true }
hex = { workspace = true }
arboard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
prism-session = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "prism-client"
path = "src/main.rs"
