[package]
name = "prism-platform-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prism-display = { workspace = true }
prism-protocol = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Com",
    "Win32_Security",
    "Foundation",
] }
