[package]
name = "prism-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prism-server"
path = "src/main.rs"

[features]
default = []
hwenc = ["dep:ffmpeg-next"]

[dependencies]
ffmpeg-next = { workspace = true, optional = true }
prism-protocol.workspace = true
prism-metrics.workspace = true
prism-security.workspace = true
prism-transport.workspace = true
prism-observability.workspace = true
prism-session.workspace = true
prism-display.workspace = true
bytes.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
arc-swap.workspace = true
tokio.workspace = true
async-trait.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
openh264.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
] }

[dev-dependencies]
prism-client = { workspace = true }
bytes = { workspace = true }
