[package]
name = "prism-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prism-protocol.workspace = true
prism-transport.workspace = true
prism-security.workspace = true
prism-metrics.workspace = true
bytes.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
arc-swap.workspace = true
tokio.workspace = true
async-trait.workspace = true
